[gd_scene load_steps=9 format=3 uid="uid://chbq5o87molyh"]

[ext_resource type="Script" uid="uid://dv3dvsafaaqvd" path="res://scripts/game.gd" id="1_3dryh"]
[ext_resource type="Texture2D" uid="uid://doghmovcgeltw" path="res://graphics/map.png" id="1_ebmjs"]
[ext_resource type="PackedScene" uid="uid://b4u3oxx658xdb" path="res://Scenes/player.tscn" id="2_qxrlw"]
[ext_resource type="PackedScene" uid="uid://dbwwkltu3myqi" path="res://Scenes/tree.tscn" id="3_wrm1d"]
[ext_resource type="Texture2D" uid="uid://cxutqp0hti8vw" path="res://graphics/objects/bench.png" id="5_wowpa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wrm1d"]
size = Vector2(6.5, 642.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3dryh"]
size = Vector2(405, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i6g32"]
size = Vector2(9, 10)

[node name="Game" type="Node2D"]
script = ExtResource("1_3dryh")

[node name="BG" type="Sprite2D" parent="."]
texture = ExtResource("1_ebmjs")
metadata/_edit_lock_ = true

[node name="Borders" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Walls" type="StaticBody2D" parent="Borders"]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/Walls"]
position = Vector2(-194, 1)
shape = SubResource("RectangleShape2D_wrm1d")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Borders/Walls"]
position = Vector2(5.5, -321.5)
shape = SubResource("RectangleShape2D_3dryh")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Borders/Walls"]
position = Vector2(1, 319)
shape = SubResource("RectangleShape2D_3dryh")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Borders/Walls"]
position = Vector2(194, 1)
shape = SubResource("RectangleShape2D_wrm1d")

[node name="FinishArea2D" type="Area2D" parent="Borders"]
collision_layer = 0
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Borders/FinishArea2D"]
polygon = PackedVector2Array(-191, -318, -193, -191, 193, -191, 192, -319)

[node name="Timer" type="Node" parent="."]

[node name="CarTimer" type="Timer" parent="Timer"]
autostart = true

[node name="Objects" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Player" parent="Objects" instance=ExtResource("2_qxrlw")]
position = Vector2(22, 38)

[node name="Tree" parent="Objects" instance=ExtResource("3_wrm1d")]
position = Vector2(61, 218)
collision_mask = 0

[node name="Tree2" parent="Objects" instance=ExtResource("3_wrm1d")]
position = Vector2(65, 244)
collision_mask = 0

[node name="Tree3" parent="Objects" instance=ExtResource("3_wrm1d")]
position = Vector2(80, 217)
collision_mask = 0

[node name="Tree4" parent="Objects" instance=ExtResource("3_wrm1d")]
position = Vector2(81, 267)
collision_mask = 0

[node name="Tree5" parent="Objects" instance=ExtResource("3_wrm1d")]
position = Vector2(64, 279)
collision_mask = 0

[node name="Bench" type="StaticBody2D" parent="Objects"]
position = Vector2(180, 221)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Objects/Bench"]
texture = ExtResource("5_wowpa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objects/Bench"]
position = Vector2(-0.5, 1)
shape = SubResource("RectangleShape2D_i6g32")

[node name="Bench2" type="StaticBody2D" parent="Objects"]
position = Vector2(180, 239)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Objects/Bench2"]
texture = ExtResource("5_wowpa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objects/Bench2"]
position = Vector2(-0.5, 1)
shape = SubResource("RectangleShape2D_i6g32")

[node name="Bench3" type="StaticBody2D" parent="Objects"]
position = Vector2(180, 257)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Objects/Bench3"]
texture = ExtResource("5_wowpa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objects/Bench3"]
position = Vector2(-0.5, 1)
shape = SubResource("RectangleShape2D_i6g32")

[node name="Bench4" type="StaticBody2D" parent="Objects"]
position = Vector2(181, 278)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Objects/Bench4"]
texture = ExtResource("5_wowpa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objects/Bench4"]
position = Vector2(-0.5, 1)
shape = SubResource("RectangleShape2D_i6g32")

[node name="CarStartPosition" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="CarStartPosition"]
position = Vector2(-202, 91)

[node name="Marker2D2" type="Marker2D" parent="CarStartPosition"]
position = Vector2(209, 115)

[node name="Marker2D3" type="Marker2D" parent="CarStartPosition"]
position = Vector2(-207, 139)

[node name="Marker2D4" type="Marker2D" parent="CarStartPosition"]
position = Vector2(209, 163)

[node name="Marker2D5" type="Marker2D" parent="CarStartPosition"]
position = Vector2(-207, 2)

[node name="Marker2D6" type="Marker2D" parent="CarStartPosition"]
position = Vector2(208, -23)

[node name="Marker2D7" type="Marker2D" parent="CarStartPosition"]
position = Vector2(-207, -52)

[node name="Marker2D8" type="Marker2D" parent="CarStartPosition"]
position = Vector2(208, -92)

[node name="Marker2D9" type="Marker2D" parent="CarStartPosition"]
position = Vector2(-207, -116)

[connection signal="body_entered" from="Borders/FinishArea2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer/CarTimer" to="." method="_on_car_timer_timeout"]
